added package-lock, and /docs for github pages

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
       rel="stylesheet"
     />
+    <base href="https://iansadler.github.io/angular-notification-widget-demo/">
+
   </head>
   <body>
     <app-root>Loading...</app-root>
